[package]
edition = "2024"
rust-version = "1.95.0"
name = "u2secure"
version = "0.1.0"
description = "Make your Linux system more secure through interactive CLI | 通过交互式的cli让你的Linux系统更安全"
readme = "README.md"
license = "MIT"
repository = "https://github.com/cherish-ltt/U2Secure"

[dependencies]
dialoguer = "0.11"
colored = "3"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ctrlc = "3"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
